  do_help()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
  statusbar()
	- Set statusblank to 25 instead of 26, to match current Pico.
	  (DLR)
  do_yesno()
	- Allow refreshing the screen via Ctrl-L, as Pico does. (DLR)
  total_update()
	- Simplify to call clearok(TRUE) and wrefresh() on edit, which
	  updates the entire screen in fewer function calls. (DLR)
  do_replace_highlight()
	- Use waddch() instead of waddstr() to display a space when we
	  have a zero-length regex. (DLR)
  do_credits()
	- Save the keystroke that breaks us out of the credits (if any)
	  and put it back so that it isn't lost.  This is especially
	  needed if the keystroke is part of a multibyte character.
	  (DLR)
- nanorc.5:
	- Update the description of how the "color" regex works. (DLR)
	- Clarify descriptions of the characters that aren't allowed
	  in the "punct" or "brackets" options. (DLR)
	- Use .B instead of \fB ... \fP where possible, as nano.1 does.
	  (DLR)
- configure.ac:
	- Minor tweaks to some of the test blocks to avoid XSI:isms.
	  (DLR, adapted from a Debian patch for GNU ed by David
	  Weinehall)
	- Don't refer to the built-in file browser as crappy anymore.
	  (DLR)
	- Check for iswpunct() and mbstowcs(). (DLR)
	- Change the behavior of --enable-extra to only define
	  NANO_EXTRA, instead of defining both it and
	  ENABLE_MULTIBUFFER. (DLR)
- doc/faq.html:
	- Update section 1.1 to mention the current maintainer. (DLR)
	- Minor capitalization and wording fixes. (DLR)
	- Update description of --enable-extra, and add missing line
	  breaks. (DLR)
- doc/nanorc.sample:
	- In the "nanorc" regexes, tweak the "color" regex to properly
	  color a line that specifies a background color without a
	  foreground color, and update the associated comments.  Also,
	  tweak the "comment" regex to color comments that don't start
	  at the beginning of a line. (DLR)
	- Clarify descriptions of the characters that aren't allowed